# ceist-gpt

./: .gitignore  .lvimrc.lua  CMakeLists.txt  LICENSE  README.md  conanfile.txt  example-config.json  graph_info.json  install_debs.sh
.cache/clangd/index/: caint-azure.cpp.BE2B7A0D761F22BC.idx  caint-azure.hpp.239FB0CFC8316E9D.idx  ceist-gpt.cpp.1FDFEC280F8D7C39.idx  ceist-gpt.hpp.3628B1604B323FD1.idx  main.cpp.D03890B43DE8DC87.idx
include/: auth.hpp  caint-azure.hpp  ceist-gpt.hpp
include/ceist-gpt/: ceist-gpt.hpp
scripts/: install-json-lib.sh  response_headers.txt  test-curl.sh  tts-test-script.sh
src/: caint-azure.cpp  ceist-gpt.cpp  compile_commands.json  main.cpp
src/.cache/clangd/index/: caint-azure.cpp.BE2B7A0D761F22BC.idx  ceist-gpt.cpp.1FDFEC280F8D7C39.idx  main.cpp.D03890B43DE8DC87.idx
test/: CMakeLists.txt  ceist-gpt-test.cpp
